completed function to easily upload datasets and multiple files into EDA notebook

--- a/notebooks/EDA_D.ipynb
+++ b/notebooks/EDA_D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,33 +13,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to load specific datasets\n",
+    "def load_datasets(dataset):\n",
+    "    # Determine the current working directory\n",
+    "    current_dir = os.getcwd()\n",
+    "    \n",
+    "    # Create the path to the raw_data directory relative to the current directory\n",
+    "    base_dir = os.path.abspath(os.path.join(current_dir, \"..\", \"raw_data\"))\n",
+    "    \n",
+    "    # List of all files in the base directory\n",
+    "    all_files = os.listdir(base_dir)\n",
+    "    \n",
+    "    # Create the path to the dataset files\n",
+    "    dataset_files = [f for f in all_files if f.startswith(f\"Dataset_{dataset[-1]}_\")]\n",
+    "    \n",
+    "    datasets = {}\n",
+    "    for filename in dataset_files:\n",
+    "        file_path = os.path.join(base_dir, filename)\n",
+    "        # Key name for the dictionary\n",
+    "        key_name = filename.replace(f\"Dataset_{dataset[-1]}_\", '').replace('.csv', '')\n",
+    "        datasets[key_name] = pd.read_csv(file_path)\n",
+    "\n",
+    "    return datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring Data Set A: 2023 US Civil Flights 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load Data Set A"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set varianle for data set A - US 2023 Kaggle Civil Flights\n",
+    "dataset_a = \"Dataset_A\"\n",
+    "\n",
+    "# Load data set A\n",
+    "dataset_a_files = load_datasets(dataset_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Perform Basic EDA on Data Set A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset_A: US2023_Kaggle_US_Flights_January 2024\n",
+      "   FlightDate  Day_Of_Week       Airline Tail_Number Dep_Airport  \\\n",
+      "0  2023-01-02            1  Endeavor Air      N605LR         BDL   \n",
+      "1  2023-01-03            2  Endeavor Air      N605LR         BDL   \n",
+      "2  2023-01-04            3  Endeavor Air      N331PQ         BDL   \n",
+      "3  2023-01-05            4  Endeavor Air      N906XJ         BDL   \n",
+      "4  2023-01-06            5  Endeavor Air      N337PQ         BDL   \n",
+      "\n",
+      "   Dep_CityName DepTime_label  Dep_Delay  Dep_Delay_Tag Dep_Delay_Type  ...  \\\n",
+      "0  Hartford, CT       Morning         -3              0      Low <5min  ...   \n",
+      "1  Hartford, CT       Morning         -5              0      Low <5min  ...   \n",
+      "2  Hartford, CT       Morning         -5              0      Low <5min  ...   \n",
+      "3  Hartford, CT       Morning         -6              0      Low <5min  ...   \n",
+      "4  Hartford, CT       Morning         -1              0      Low <5min  ...   \n",
+      "\n",
+      "  Flight_Duration       Distance_type  Delay_Carrier Delay_Weather  Delay_NAS  \\\n",
+      "0              56  Short Haul >1500Mi              0             0          0   \n",
+      "1              62  Short Haul >1500Mi              0             0          0   \n",
+      "2              49  Short Haul >1500Mi              0             0          0   \n",
+      "3              54  Short Haul >1500Mi              0             0          0   \n",
+      "4              50  Short Haul >1500Mi              0             0          0   \n",
+      "\n",
+      "  Delay_Security  Delay_LastAircraft           Manufacturer  Model  \\\n",
+      "0              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "1              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "2              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "3              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "4              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "\n",
+      "   Aicraft_age  \n",
+      "0           16  \n",
+      "1           16  \n",
+      "2           10  \n",
+      "3           17  \n",
+      "4           10  \n",
+      "\n",
+      "[5 rows x 24 columns]\n",
+      "\n",
+      "\n",
+      "Dataset_A: US2023_Kaggle_US_Flights_2023\n",
+      "   FlightDate  Day_Of_Week       Airline Tail_Number Dep_Airport  \\\n",
+      "0  2023-01-02            1  Endeavor Air      N605LR         BDL   \n",
+      "1  2023-01-03            2  Endeavor Air      N605LR         BDL   \n",
+      "2  2023-01-04            3  Endeavor Air      N331PQ         BDL   \n",
+      "3  2023-01-05            4  Endeavor Air      N906XJ         BDL   \n",
+      "4  2023-01-06            5  Endeavor Air      N337PQ         BDL   \n",
+      "\n",
+      "   Dep_CityName DepTime_label  Dep_Delay  Dep_Delay_Tag Dep_Delay_Type  ...  \\\n",
+      "0  Hartford, CT       Morning         -3              0      Low <5min  ...   \n",
+      "1  Hartford, CT       Morning         -5              0      Low <5min  ...   \n",
+      "2  Hartford, CT       Morning         -5              0      Low <5min  ...   \n",
+      "3  Hartford, CT       Morning         -6              0      Low <5min  ...   \n",
+      "4  Hartford, CT       Morning         -1              0      Low <5min  ...   \n",
+      "\n",
+      "  Flight_Duration       Distance_type  Delay_Carrier Delay_Weather  Delay_NAS  \\\n",
+      "0              56  Short Haul >1500Mi              0             0          0   \n",
+      "1              62  Short Haul >1500Mi              0             0          0   \n",
+      "2              49  Short Haul >1500Mi              0             0          0   \n",
+      "3              54  Short Haul >1500Mi              0             0          0   \n",
+      "4              50  Short Haul >1500Mi              0             0          0   \n",
+      "\n",
+      "  Delay_Security  Delay_LastAircraft           Manufacturer  Model  \\\n",
+      "0              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "1              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "2              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "3              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "4              0                   0  CANADAIR REGIONAL JET    CRJ   \n",
+      "\n",
+      "   Aicraft_age  \n",
+      "0           16  \n",
+      "1           16  \n",
+      "2           10  \n",
+      "3           17  \n",
+      "4           10  \n",
+      "\n",
+      "[5 rows x 24 columns]\n",
+      "\n",
+      "\n",
+      "Dataset_A: US2023_Kaggle_Weather_Meteo_By_Airport\n",
+      "         time  tavg  tmin  tmax  prcp  snow   wdir  wspd    pres airport_id\n",
+      "0  2023-01-01   8.1   2.2  11.7   0.0   0.0  278.0   9.7  1013.8        ABE\n",
+      "1  2023-01-02   5.4   0.0  11.7   0.0   0.0  353.0   3.6  1019.6        ABE\n",
+      "2  2023-01-03   8.4   7.2   9.4  15.2   0.0   50.0   5.0  1013.9        ABE\n",
+      "3  2023-01-04  11.1   6.7  17.2   0.0   0.0  302.0   4.7  1009.8        ABE\n",
+      "4  2023-01-05  12.7   6.7  14.4   7.9   0.0  292.0   7.2  1013.0        ABE\n",
+      "\n",
+      "\n",
+      "Dataset_A: US2023_Kaggle_Cancelled_Diverted_2023\n",
+      "   FlightDate  Day_Of_Week       Airline Tail_Number  Cancelled  Diverted  \\\n",
+      "0  2023-01-25            3  Endeavor Air      N691CA        1.0       0.0   \n",
+      "1  2023-01-03            2  Endeavor Air      N937XJ        1.0       0.0   \n",
+      "2  2023-01-03            2  Endeavor Air      N937XJ        1.0       0.0   \n",
+      "3  2023-01-11            3  Endeavor Air      N926XJ        1.0       0.0   \n",
+      "4  2023-01-25            3  Endeavor Air      N335PQ        0.0       1.0   \n",
+      "\n",
+      "  Dep_Airport     Dep_CityName DepTime_label  Dep_Delay  ...  \\\n",
+      "0         JFK     New York, NY       Evening        0.0  ...   \n",
+      "1         MSP  Minneapolis, MN       Morning        0.0  ...   \n",
+      "2         PIT   Pittsburgh, PA     Afternoon        0.0  ...   \n",
+      "3         BWI    Baltimore, MD     Afternoon        0.0  ...   \n",
+      "4         BWI    Baltimore, MD     Afternoon        2.0  ...   \n",
+      "\n",
+      "          Arr_CityName Arr_Delay    Arr_Delay_Type Flight_Duration  \\\n",
+      "0  Ithaca/Cortland, NY       0.0  No Arrival Delay             0.0   \n",
+      "1       Pittsburgh, PA       0.0  No Arrival Delay             0.0   \n",
+      "2      Minneapolis, MN       0.0  No Arrival Delay             0.0   \n",
+      "3         New York, NY       0.0  No Arrival Delay             0.0   \n",
+      "4         New York, NY       0.0  No Arrival Delay             0.0   \n",
+      "\n",
+      "   Distance_type Delay_Carrier  Delay_Weather Delay_NAS  Delay_Security  \\\n",
+      "0     Short Haul           0.0            0.0       0.0             0.0   \n",
+      "1     Short Haul           0.0            0.0       0.0             0.0   \n",
+      "2     Short Haul           0.0            0.0       0.0             0.0   \n",
+      "3     Short Haul           0.0            0.0       0.0             0.0   \n",
+      "4     Short Haul           0.0            0.0       0.0             0.0   \n",
+      "\n",
+      "   Delay_LastAircraft  \n",
+      "0                 0.0  \n",
+      "1                 0.0  \n",
+      "2                 0.0  \n",
+      "3                 0.0  \n",
+      "4                 0.0  \n",
+      "\n",
+      "[5 rows x 23 columns]\n",
+      "\n",
+      "\n",
+      "Dataset_A: US2023_Kaggle_Airports_Geolocation\n",
+      "  IATA_CODE                              AIRPORT         CITY STATE COUNTRY  \\\n",
+      "0       ABE  Lehigh Valley International Airport    Allentown    PA     USA   \n",
+      "1       ABI             Abilene Regional Airport      Abilene    TX     USA   \n",
+      "2       ABQ    Albuquerque International Sunport  Albuquerque    NM     USA   \n",
+      "3       ABR            Aberdeen Regional Airport     Aberdeen    SD     USA   \n",
+      "4       ABY   Southwest Georgia Regional Airport       Albany    GA     USA   \n",
+      "\n",
+      "   LATITUDE  LONGITUDE  \n",
+      "0  40.65236  -75.44040  \n",
+      "1  32.41132  -99.68190  \n",
+      "2  35.04022 -106.60919  \n",
+      "3  45.44906  -98.42183  \n",
+      "4  31.53552  -84.19447  \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Inspect file head\n",
+    "for name, df in dataset_a_files.items():\n",
+    "    print(f\"Dataset_A: {name}\")\n",
+    "    print(df.head())\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "lateguru",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
