commiting the concatenation of all the aiport csvs

--- a/notebooks/EDA_C.ipynb
+++ b/notebooks/EDA_C.ipynb
@@ -938,6 +938,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56c728ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pd.read_csv('Dataset_A_US2023_Kaggle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8966fb6a",
    "metadata": {},
    "outputs": [],
@@ -990,6 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "36eea2d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,6 +1686,49 @@
    ],
    "source": [
     "sfo_df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "76396366",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Time                           0\n",
+       "Origin                         0\n",
+       "Dest                           0\n",
+       "Carrier                        0\n",
+       "Cancelled                      0\n",
+       "CancellationReason        393638\n",
+       "Delayed                        0\n",
+       "DepDelayMinutes             5147\n",
+       "CarrierDelay              331084\n",
+       "WeatherDelay              331084\n",
+       "NASDelay                  331084\n",
+       "SecurityDelay             331084\n",
+       "LateAircraftDelay         331084\n",
+       "Temperature                    0\n",
+       "Feels_Like_Temperature         0\n",
+       "Altimeter_Pressure             0\n",
+       "Sea_Level_Pressure             0\n",
+       "Visibility                     0\n",
+       "Wind_Speed                     0\n",
+       "Wind_Gust                      0\n",
+       "Precipitation                  0\n",
+       "Ice_Accretion_3hr              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfo_df.isnull().sum()"
    ]
   },
   {
@@ -3874,6 +3928,383 @@
    "id": "27d931be",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "002bc707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "76c1d604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['LAX.csv', 'MDW.csv', 'DTW.csv', 'BWI.csv', 'MIA.csv', 'SAN.csv', 'TPA.csv', 'DFW.csv', 'SEA.csv', 'AUS.csv', 'IAH.csv', 'SFO.csv', 'DEN.csv', 'CLT.csv', 'JFK.csv', 'MCO.csv', 'LGA.csv', 'EWR.csv', 'ATL.csv', 'IAD.csv', 'ORD.csv', 'PHX.csv', 'LAS.csv', 'PHL.csv', 'BNA.csv', 'DCA.csv', 'SLC.csv', 'FLL.csv', 'BOS.csv', 'MSP.csv']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8b/0kc0p26s4lq_bndd5xrhdlhw0000gn/T/ipykernel_7483/2944840533.py:18: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(os.path.join(dataset_b_dir,file))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15144514 entries, 0 to 15144513\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                  Dtype  \n",
+      "---  ------                  -----  \n",
+      " 0   Time                    object \n",
+      " 1   Origin                  object \n",
+      " 2   Dest                    object \n",
+      " 3   Carrier                 object \n",
+      " 4   Cancelled               bool   \n",
+      " 5   CancellationReason      object \n",
+      " 6   Delayed                 bool   \n",
+      " 7   DepDelayMinutes         float64\n",
+      " 8   CarrierDelay            float64\n",
+      " 9   WeatherDelay            float64\n",
+      " 10  NASDelay                float64\n",
+      " 11  SecurityDelay           float64\n",
+      " 12  LateAircraftDelay       float64\n",
+      " 13  Temperature             float64\n",
+      " 14  Feels_Like_Temperature  float64\n",
+      " 15  Altimeter_Pressure      float64\n",
+      " 16  Sea_Level_Pressure      float64\n",
+      " 17  Visibility              float64\n",
+      " 18  Wind_Speed              float64\n",
+      " 19  Wind_Gust               float64\n",
+      " 20  Precipitation           float64\n",
+      " 21  Ice_Accretion_3hr       float64\n",
+      "dtypes: bool(2), float64(15), object(5)\n",
+      "memory usage: 2.3+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using pandas concatenate to build a master df\n",
+    "'''notebooks_dir = os.path.dirname(__file__)\n",
+    "lateguru_dir = os.path.dirname(notebooks_dir)\n",
+    "dataset_b_dir = os.path.join(lateguru_dir, \"raw_data\", \"Dataset_B_FORWW_Kaggle\")'''\n",
+    "\n",
+    "dataset_b_dir = '../raw_data/Dataset_B_FORWW_Kaggle'\n",
+    "\n",
+    "file_names = os.listdir(dataset_b_dir)\n",
+    "\n",
+    "print(file_names)\n",
+    "\n",
+    "master_df = pd.read_csv(os.path.join(dataset_b_dir, file_names[0]))\n",
+    "\n",
+    "#print(master_df)\n",
+    "\n",
+    "\n",
+    "for file in file_names:\n",
+    "    df = pd.read_csv(os.path.join(dataset_b_dir,file), low_memory=False)\n",
+    "    master_df = pd.concat([master_df,df], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "master_df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "4407f80b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_csv = 'All_Airports.csv'\n",
+    "\n",
+    "output_path = os.path.join(dataset_b_dir, output_csv)\n",
+    "\n",
+    "master_df.to_csv(output_path, header=True, index=False, compression='zip')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "032dd70b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15144514 entries, 0 to 15144513\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                  Dtype  \n",
+      "---  ------                  -----  \n",
+      " 0   Time                    object \n",
+      " 1   Origin                  object \n",
+      " 2   Dest                    object \n",
+      " 3   Carrier                 object \n",
+      " 4   Cancelled               bool   \n",
+      " 5   CancellationReason      object \n",
+      " 6   Delayed                 bool   \n",
+      " 7   DepDelayMinutes         float64\n",
+      " 8   CarrierDelay            float64\n",
+      " 9   WeatherDelay            float64\n",
+      " 10  NASDelay                float64\n",
+      " 11  SecurityDelay           float64\n",
+      " 12  LateAircraftDelay       float64\n",
+      " 13  Temperature             float64\n",
+      " 14  Feels_Like_Temperature  float64\n",
+      " 15  Altimeter_Pressure      float64\n",
+      " 16  Sea_Level_Pressure      float64\n",
+      " 17  Visibility              float64\n",
+      " 18  Wind_Speed              float64\n",
+      " 19  Wind_Gust               float64\n",
+      " 20  Precipitation           float64\n",
+      " 21  Ice_Accretion_3hr       float64\n",
+      "dtypes: bool(2), float64(15), object(5)\n",
+      "memory usage: 2.3+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_airports_df = pd.read_csv(os.path.join(dataset_b_dir, output_csv))\n",
+    "all_airports_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "ba05233a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Dest</th>\n",
+       "      <th>Carrier</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>CancellationReason</th>\n",
+       "      <th>Delayed</th>\n",
+       "      <th>DepDelayMinutes</th>\n",
+       "      <th>CarrierDelay</th>\n",
+       "      <th>WeatherDelay</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LateAircraftDelay</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Feels_Like_Temperature</th>\n",
+       "      <th>Altimeter_Pressure</th>\n",
+       "      <th>Sea_Level_Pressure</th>\n",
+       "      <th>Visibility</th>\n",
+       "      <th>Wind_Speed</th>\n",
+       "      <th>Wind_Gust</th>\n",
+       "      <th>Precipitation</th>\n",
+       "      <th>Ice_Accretion_3hr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-01 09:00:00</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>JFK</td>\n",
+       "      <td>American Airlines Inc.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>55.9</td>\n",
+       "      <td>1020.32</td>\n",
+       "      <td>1020.1</td>\n",
+       "      <td>16093.40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-02 09:00:00</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>JFK</td>\n",
+       "      <td>American Airlines Inc.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>1025.74</td>\n",
+       "      <td>1025.5</td>\n",
+       "      <td>16093.40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-03 09:00:00</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>JFK</td>\n",
+       "      <td>American Airlines Inc.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1024.38</td>\n",
+       "      <td>1015.2</td>\n",
+       "      <td>4828.02</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>24.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-03 09:00:00</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>JFK</td>\n",
+       "      <td>American Airlines Inc.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>1024.38</td>\n",
+       "      <td>1024.1</td>\n",
+       "      <td>6437.36</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>24.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-04 09:00:00</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>JFK</td>\n",
+       "      <td>American Airlines Inc.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>51.1</td>\n",
+       "      <td>1023.03</td>\n",
+       "      <td>1015.2</td>\n",
+       "      <td>6437.36</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>24.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Time Origin Dest                 Carrier  Cancelled  \\\n",
+       "0  2021-01-01 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
+       "1  2021-01-02 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
+       "2  2021-01-03 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
+       "3  2021-01-03 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
+       "4  2021-01-04 09:00:00    LAX  JFK  American Airlines Inc.      False   \n",
+       "\n",
+       "  CancellationReason  Delayed  DepDelayMinutes  CarrierDelay  WeatherDelay  \\\n",
+       "0                NaN    False              0.0           NaN           NaN   \n",
+       "1                NaN     True              2.0           NaN           NaN   \n",
+       "2                NaN     True             28.0          28.0           0.0   \n",
+       "3                NaN     True             28.0          28.0           0.0   \n",
+       "4                NaN    False              0.0           NaN           NaN   \n",
+       "\n",
+       "   ...  LateAircraftDelay  Temperature  Feels_Like_Temperature  \\\n",
+       "0  ...                NaN         56.0                    55.9   \n",
+       "1  ...                NaN         54.0                    54.0   \n",
+       "2  ...                0.0         52.0                    52.0   \n",
+       "3  ...                0.0         53.0                    53.1   \n",
+       "4  ...                NaN         51.0                    51.1   \n",
+       "\n",
+       "   Altimeter_Pressure  Sea_Level_Pressure  Visibility  Wind_Speed  Wind_Gust  \\\n",
+       "0             1020.32              1020.1    16093.40         0.0      24.97   \n",
+       "1             1025.74              1025.5    16093.40         0.0      24.97   \n",
+       "2             1024.38              1015.2     4828.02         4.6      24.97   \n",
+       "3             1024.38              1024.1     6437.36         4.6      24.97   \n",
+       "4             1023.03              1015.2     6437.36         4.6      24.97   \n",
+       "\n",
+       "   Precipitation  Ice_Accretion_3hr  \n",
+       "0            0.0                0.0  \n",
+       "1            0.0                0.0  \n",
+       "2            0.0                0.0  \n",
+       "3            0.0                0.0  \n",
+       "4            0.0                0.0  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_airports_df.head()"
+   ]
   }
  ],
  "metadata": {
