--- a/notebooks/data_preprocessing_D.ipynb
+++ b/notebooks/data_preprocessing_D.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "15144514"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1749,6 +1749,167 @@
     "    sns.boxplot(x=df[column])\n",
     "    plt.title(f'Boxplot of {column}')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Outliers Summary\n",
+    "\n",
+    "After removing extreme outliets, a total of 1,954,889 outliers were kept. This means approximately 12.9% of our data points are classified as outliers using this method.\n",
+    "Given the size of our dataset, a large number of outliers might be expected, especially in a dataset with a variety of delay types and weather conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select only the numeric columns\n",
+    "# numeric_cols = df.select_dtypes(include=[np.number]).columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the RobustScaler\n",
+    "# scaler = RobustScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit and transform the numeric data\n",
+    "# df[numeric_cols] = scaler.fit_transform(df[numeric_cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the scaled data\n",
+    "# print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Balancing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the unique values in the WeatherDelay column\n",
+    "# unique_values = df['WeatherDelay'].unique()\n",
+    "\n",
+    "# Display the unique values\n",
+    "# print(\"Unique values in WeatherDelay:\", unique_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename the 'WeatherDelay' column to 'Weather_Delay_Length' for clarity before we create a new 'Binary' column\n",
+    "# df.rename(columns={'WeatherDelay': 'Weather_Delay_Length'}, inplace=True)\n",
+    "\n",
+    "# Verify the change\n",
+    "# print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new binary column 'WeatherDelay_Binary'\n",
+    "# df['Weather_Delayed'] = df['Weather_Delay_Length'].apply(lambda x: 1 if x > 0 else 0)\n",
+    "\n",
+    "# Check the first few rows to confirm\n",
+    "# print(df[['Weather_Delay_Length', 'Weather_Delayed']].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the total number of instances\n",
+    "# total = df['Weather_Delayed'].count()\n",
+    "\n",
+    "# Calculate the percentage of each class\n",
+    "# percent_delayed = (df['Weather_Delayed'].value_counts()[1] / total) * 100\n",
+    "# percent_not_delayed = (df['Weather_Delayed'].value_counts()[0] / total) * 100\n",
+    "\n",
+    "# Display the results\n",
+    "# print(f\"Percentage of delayed flights: {percent_delayed:.2f}%\")\n",
+    "# print(f\"Percentage of not delayed flights: {percent_not_delayed:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save preprocessed data before Scaling and Balancing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to save the DataFrame to the raw_data directory\n",
+    "def save_dataset(df):\n",
+    "    # Determine the current working directory\n",
+    "    current_dir = os.getcwd()\n",
+    "    \n",
+    "    # Create the path to the raw_data directory relative to the current directory\n",
+    "    base_dir = os.path.abspath(os.path.join(current_dir, \"..\", \"raw_data\"))\n",
+    "    \n",
+    "    # Define the path to save the treated outliers DataFrame\n",
+    "    treated_outliers_file_path = os.path.join(base_dir, \"preprocessed_treated_outliers.csv\")\n",
+    "    \n",
+    "    # Save the DataFrame as a CSV file\n",
+    "    df.to_csv(treated_outliers_file_path, index=False)\n",
+    "    \n",
+    "# Call the function to save your DataFrame\n",
+    "save_dataset(df)"
    ]
   }
  ],
