notebooks/data_preprocessing_D.ipynb

--- a/notebooks/data_preprocessing_D.ipynb
+++ b/notebooks/data_preprocessing_D.ipynb
@@ -1713,7 +1713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample only 10% of the data for quick testing while maintaining class imbalance\n",
+    "# Sample only 10% of the data for quick testing\n",
     "X_sample, _, y_sample, _ = train_test_split(\n",
     "    X, y, \n",
     "    test_size=0.9,  # Keep only 10% for the sample\n",
@@ -1732,7 +1732,7 @@
     "X_train_sample, X_test_sample, y_train_sample, y_test_sample = train_test_split(\n",
     "    X_sample, y_sample, \n",
     "    test_size=0.2,  # 80% train, 20% test\n",
-    "    random_state=42, \n",
+    "    random_state=42, #Reproducibility\n",
     "    stratify=y_sample  # Maintain the class distribution in the split\n",
     ")"
    ]
@@ -1761,6 +1761,7 @@
     "X_train_scaled = scaler.fit_transform(X_train_sample[numeric_features])\n",
     "X_test_scaled = scaler.transform(X_test_sample[numeric_features])\n",
     "\n",
+    "#Concatenate arrays to form one array\n",
     "X_train_preprocessed = np.hstack([X_train_encoded.toarray(), X_train_scaled, X_train_sample[binary_features]])\n",
     "X_test_preprocessed = np.hstack([X_test_encoded.toarray(), X_test_scaled, X_test_sample[binary_features]])"
    ]
@@ -1782,11 +1783,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the XGBoost model with basic parameters\n",
+    "# Initialize the XGBoost model\n",
     "xgb_model = xgb.XGBClassifier(\n",
-    "    use_label_encoder=False,  # Disable the use of the label encoder\n",
-    "    eval_metric='logloss',  # Use logloss as the evaluation metric\n",
-    "    random_state=42  # Set the random state for reproducibility\n",
+    "    use_label_encoder=False,  # Disable the use of the label encoder - Need to test if this is required or not\n",
+    "    eval_metric='logloss',  # logloss as the evaluation metric\n",
+    "    random_state=42  # For reproducibility\n",
     ")"
    ]
   },
@@ -2259,6 +2260,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Note: Need to investigate \"use_label_encoder\" error"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -2302,6 +2310,7 @@
     }
    ],
    "source": [
+    "#Calculate Recall\n",
     "from sklearn.metrics import recall_score\n",
     "recall = recall_score(y_test_sample, y_pred)\n",
     "print(f\"Recall: {recall}\")"
@@ -2321,6 +2330,7 @@
     }
    ],
    "source": [
+    "# Calculate ROC AUC\n",
     "from sklearn.metrics import roc_auc_score\n",
     "auc_roc = roc_auc_score(y_test_sample, y_pred)\n",
     "print(f\"AUC-ROC: {auc_roc}\")"
@@ -2342,6 +2352,7 @@
     }
    ],
    "source": [
+    "# Inspect Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test_sample, y_pred)\n",
     "print(f\"Confusion Matrix:\\n{cm}\")"
@@ -2370,120 +2381,10 @@
     }
    ],
    "source": [
+    "# Generate Classifiation Report\n",
     "from sklearn.metrics import classification_report\n",
     "report = classification_report(y_test_sample, y_pred)\n",
     "print(f\"Classification Report:\\n{report}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11484620    0\n",
-       "3141287     0\n",
-       "5262013     0\n",
-       "2435018     1\n",
-       "1069357     0\n",
-       "           ..\n",
-       "2984150     0\n",
-       "2519779     0\n",
-       "5450463     0\n",
-       "6620494     0\n",
-       "12639996    0\n",
-       "Name: Weather_Delayed, Length: 302891, dtype: int64"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "302891"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(y_test_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1211560"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(y_train_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "302891"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(X_test_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1211560"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(X_train_sample)"
    ]
   },
   {
