--- a/notebooks/EDA_C_AllAirports.ipynb
+++ b/notebooks/EDA_C_AllAirports.ipynb
@@ -3021,6 +3021,56 @@
    "id": "27d931be",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92399db7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(nrows=5,ncols=3, figsize=(10,20))\n",
+    "\n",
+    "axes= axes.flatten()\n",
+    "\n",
+    "num_features = df[['DepDelayMinutes', 'CarrierDelay', 'WeatherDelay',\n",
+    "       'NASDelay', 'SecurityDelay', 'LateAircraftDelay', 'Temperature',\n",
+    "       'Feels_Like_Temperature', 'Altimeter_Pressure', 'Sea_Level_Pressure',\n",
+    "       'Visibility', 'Wind_Speed', 'Wind_Gust', 'Precipitation',\n",
+    "       'Ice_Accretion_3hr']]\n",
+    "\n",
+    "\n",
+    "for i, col in enumerate(num_features.columns):\n",
+    "    sns.histplot(data=num_features, x=col, ax=axes[i])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7356a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(nrows=5,ncols=3, figsize=(10,20))\n",
+    "\n",
+    "axes= axes.flatten()\n",
+    "\n",
+    "num_features = df[['DepDelayMinutes', 'CarrierDelay', 'WeatherDelay',\n",
+    "       'NASDelay', 'SecurityDelay', 'LateAircraftDelay', 'Temperature',\n",
+    "       'Feels_Like_Temperature', 'Altimeter_Pressure', 'Sea_Level_Pressure',\n",
+    "       'Visibility', 'Wind_Speed', 'Wind_Gust', 'Precipitation',\n",
+    "       'Ice_Accretion_3hr']]\n",
+    "\n",
+    "\n",
+    "for i, col in enumerate(num_features.columns):\n",
+    "    sns.boxenplot(data=num_features, x=col, ax=axes[i])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
