uploading my data preprocess notebook

--- a/notebooks/Data_prep_M.ipynb
+++ b/notebooks/Data_prep_M.ipynb
@@ -2688,6 +2688,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b070d3de-ebf6-420e-a990-4d3897c12d2d",
+   "metadata": {},
+   "source": [
+    "### Save proprocessed dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68430e2a-d422-4b86-a1b4-e70c190a8109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to save the DataFrame to the raw_data directory\n",
+    "def save_dataset(df):\n",
+    "    # Determine the current working directory\n",
+    "    current_dir = os.getcwd()\n",
+    "    \n",
+    "    # Create the path to the raw_data directory relative to the current directory\n",
+    "    base_dir = os.path.abspath(os.path.join(current_dir, \"..\", \"data\"))\n",
+    "    \n",
+    "    # Define the path to save the treated outliers DataFrame\n",
+    "    treated_outliers_file_path = os.path.join(base_dir, \"preprocessed_data_M.csv\")\n",
+    "    \n",
+    "    # Save the DataFrame as a CSV file\n",
+    "    df.to_csv(treated_outliers_file_path, index=False)\n",
+    "    \n",
+    "# Call the function to save your DataFrame\n",
+    "save_dataset(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b6f58436-bfe7-435c-9477-6de2853e0990",
    "metadata": {},
    "source": [
